# parker

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  envrc.example  rustfmt.toml
scripts/: db_available.sh
src/: configuration.rs  lib.rs  main.rs  settings.rs
src/handlers/: health.rs  welcome.rs
src/routes/: health_check.rs  mod.rs  welcome.rs
tests/: health.rs  health_check.rs  index.rs  welcome.rs
