[package]
name = "parker"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "parker"

[dependencies]
tide = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.8.0", features = ["attributes"] }
config = "0.11.0"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
  "runtime-async-std-rustls",
  "postgres",
  "uuid",
  "chrono",
  "macros",
  "offline",
  "migrate"
]

[dev-dependencies]
tide-testing = "0.1.3"

