[package]
name = "parker"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "parker"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
config = "0.11.0"
axum = "0.1.3"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
  "runtime-async-std-rustls",
  "postgres",
  "uuid",
  "chrono",
  "macros",
  "offline",
  "migrate"
]

[dev-dependencies]
tide-testing = "0.1.3"

