[package]
name = "parker"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "parker"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
config = "0.11.0"
axum = "0.2"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
tokio-postgres = "0.7.2"
tower-http = { version = "0.1", features = ["trace"] }

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "offline",
    "migrate"
]

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
